Version 1.0.3 (not yet released):
- Added spanish translation by Carlos Martín Nieto. Thanks a lot!
- Correct the documentation of "~/.mpop_uidls" in mpop.1 and mpop.texi.
- Gnulib update. Removes the initialization of pkgdata_DATA from
  gnulib/Makefile.am, thanks to a fix by Bruno Haible. 'make install' will no
  longer create an empty directory $(pkgdatadir) anymore (the default for
  $(pkgdatadir) is /usr/local/share/mpop). Reported by Roman Bogorodskiy.

Version 1.0.2:
- Gnulib update. The modules nanosleep and gettimeofday still differ from the
  official gnulib source.
- Disable SSLv2 because it has known flaws. This only affects the OpenSSL
  version because GNU TLS does not implement SSLv2.
- Add new command tls_force_sslv3 and option --tls-force-sslv3 to force
  TLS/SSL version SSLv3. This might be needed to use SSL with some old and 
  broken servers. Closes msmtp Debian bug #374610, reported by Marko Mäkelä.
  Thanks to Julien Louis for tracking this problem down and testing the patch.
- Changed detection of libgnutls so that it works with version >= 1.2.0 again.
- Improvements for the build system:
  - Quote arguments of M4 macros.
  - Use AC_LIB_HAVE_LINKFLAGS to detect libraries. Do not use *-config scripts
    or pkg-config. This avoids problems that are reported in this thread:
    http://thread.gmane.org/gmane.comp.encryption.gpg.gnutls.devel/
    1610/focus=1610 .
  - Use HAVE_LIB* macros instead of USE_* or others, for consistency.
- Link with LIB_NANOSLEEP as determined by the gnulib nanosleep module. This
  fixes build problems on Solaris. Reported by Daniel Rechsteiner for msmtp. 
  Thanks!
- Allow '+' and '/' in Return-Path mail addresses; do not replace them with '_'.
  Fix documentation of which characters are allowed and which are replaced,
  both in the code and in the user documentation for %F expansion.

Version 1.0.1:
- Changed the default UIDLS file from "~/.mpop_uidls" to
  "~/.mpop_uidls/%U_at_%H".